Fix dashboard charts on Firefox.

--- a/src/main/webapp/resources/css/statistics.css
+++ b/src/main/webapp/resources/css/statistics.css
@@ -140,3 +140,7 @@ label {
     font-size: 9pt;
     color: #CCCCCC;
 }
+
+.dash-grid td {
+    width: 50%;
+}
